welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
    if (speed >=81)
    ^caughtSpeeding:14: error: type mismatch;
 found   : Unit
 required: Int
    if (speed >=86)
    ^